# hello-rust

./: .gitignore  Cargo.toml  README.md
aweb/: Cargo.toml  REDME.md  app.yaml
aweb/src/: main.rs
aweb/src/config/: mod.rs  routes.rs
hello-casbin/: .env  Cargo.toml  readme.md
hello-casbin/auth/: auth_model.conf  mysql.sql  policy.csv
hello-casbin/src/: main.rs
hello-diesel/: .env  Cargo.toml  README.md  diesel.toml
hello-diesel/migrations/2022-07-05-135706_create_posts/: down.sql  up.sql
hello-diesel/src/: db_service.rs  db_service2.rs  lib.rs  main.rs  models.rs  schema.rs  test_batch.rs
hello-diesel/src/models/: location.rs  mod.rs  post.rs  user.rs
hello-poem/: Cargo.toml  README.md
hello-poem/.lb_config/: apis.json
hello-poem/src/: api.rs  lib.rs  main.rs  model.rs
hello-seaorm/: .env  Cargo.toml  README.md  SQLLOG.md
hello-seaorm/benches/: my_benchmark.rs
hello-seaorm/src/: db_post.rs  lib.rs  main.rs
hello-seaorm/src/config/: database.rs  log.rs  logger.rs  mod.rs
hello-seaorm/src/entities/: mod.rs  posts.rs  prelude.rs  short_links.rs  users.rs
hello-seaorm/src/migration/: Cargo.toml
hello-sqlx/: Cargo.toml  app.yaml  up.sql
hello-sqlx/src/: lib.rs  main.rs  test.rs  test_batch.rs
hello-sqlx/src/config/: database.rs  init.rs  mod.rs  state.rs
hello-sqlx/src/repository/: mod.rs
hello-sqlx/src/repository/model/: mod.rs  user.rs
hello-syn/: Cargo.toml
hello-syn/examples/: base.rs
hello-syn/my-macro/: Cargo.toml
hello-syn/my-macro/src/: lib.rs  model.rs  tests.rs
hello-syn/src/: lib.rs  main.rs  myvec.rs
hello-wasm/: Cargo.toml  redme.md
hello-wasm/src/: lib.rs
hello-wasm/web/: index.html  index.js
