[package]
name = "aweb"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
strip = true
#strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5" }
tokio = { version = "1.19", features = ["full"]}

#log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
time = {version = "0.3",features = ["macros","local-offset"]}

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
# serde_any = { version = "0.5", default-features = false, features = ["yaml"] } # "toml"

# tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["trace","cors","fs"] }#"add-extension", ,
# axum-extra={version = "*",features = ["spa"]}