[package]
name = "hello-casbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
sqlx-adapter = {version = "0.4", default-features = false, features = ["mysql","runtime-tokio-native-tls"]}
lazy_static = "1"
once_cell = "1"

dotenv = "0.15"