[package]
name = "hello-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
lazy_static = "1"
once_cell = "1"

diesel = { version = "1.4.8", features = ["mysql","r2d2"] }
dotenv = "0.15"