[package]
name = "hello-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1"

diesel = { version = "2.0.2", features = ["mysql","r2d2","chrono"] }
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = {version = "0.3",features = ["macros","local-offset"]}

chrono = { version = "0.4", features = ["serde"] }