[package]
name = "hello-seaorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.8.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = {version = "0.3",features = ["macros","local-offset"]}
chrono = "0.4"

dotenv = "0.15"

lazy_static = "1"
async_once = "0.2"
once_cell = "1"