[package]
name = "hello-seaorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.8.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros","debug-print"] }
# futures = "0.3"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "full"] }

tracing ={version =  "0.1", features = [ "log" ]}
tracing-subscriber = { version = "0.3", features = ["time"] }
time = {version = "0.3",features = ["macros","local-offset"]}
chrono = "0.4"

dotenv = "0.15"

once_cell = "1"

#log = "*"