[package]
name = "hello-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 加快sqlx编译速度
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "offline"] }
# co-orm = { path = "../libs/co-orm" }
co-orm = {version = "0.2.2", features = ["mysql"]}

once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_any = { version = "0.5", default-features = false, features = ["yaml"] } # "toml"

#log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
tracing-appender = { version = "0.2"}
time = {version = "0.3",features = ["macros"]}

futures = "0.3"
rayon = "1.5"